<resources>
    <string name="app_name">Weather app</string>
    <string name="Homescreen">Current location</string>
    <string name="List">List</string>
    <string name="Local">Local</string>
    <string name="back_button">back</string>
    <string name="detail">Chosen Location</string>
    <string name="navigation_rail">Navigate between items here</string>
</resources>