...
                Icon(Icons.Outlined.Home, contentDescription = "navigate to home screen")
            }

            IconButton(onClick = goToList) {
                Icon(
                    Icons.Filled.List,
                    contentDescription = "navigate to list page",
                )
            }
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { showAddLocation() },
                containerColor = BottomAppBarDefaults.bottomAppBarFabColor,
                elevation = FloatingActionButtonDefaults.bottomAppBarFabElevation()
            ) {
                Icon(Icons.Filled.Add, "Nieuwe locatie")
            }
        }
    )
}

